After tons of commits deleted via Rebase->Abort ;) and restored from local .zip archive

--- a/projectPillSched/css/style.css
+++ b/projectPillSched/css/style.css
@@ -6,8 +6,12 @@ body {
     margin: 0px auto;
 }
 
+[data-role="header"] {
+	 height:64px;
+}
+
 header h1 {
-    font-size: 36px;
+    font-size: 48px;
     margin: 0px;
 }
 
